@@ -36,8 +36,8 @@ function screen_resources($resource = null) {
 		SCREEN_RESOURCE_SCREEN => _('Screen'),
 		SCREEN_RESOURCE_SERVER_INFO => _('Server info'),
 		SCREEN_RESOURCE_SIMPLE_GRAPH => _('Simple graph'),
-		SCREEN_RESOURCE_HOSTGROUP_TRIGGERS => _('Latest host group issues'),
-		SCREEN_RESOURCE_HOST_TRIGGERS => _('Latest host issues'),
+		SCREEN_RESOURCE_HOSTGROUP_TRIGGERS => _('Host group issues'),
+		SCREEN_RESOURCE_HOST_TRIGGERS => _('Host issues'),
 		SCREEN_RESOURCE_SYSTEM_STATUS => _('System status'),
 		SCREEN_RESOURCE_TRIGGERS_INFO => _('Triggers info'),
 		SCREEN_RESOURCE_TRIGGERS_OVERVIEW => _('Triggers overview'),
